--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -19,7 +19,6 @@
     <table class="table">
         <thead class="thead-light">
             <tr>
-                <th scope="col">#</th>
                 <th scope="col">Username</th>
                 <th scope="col">Password</th>
                 <th scope="col">First Name</th>
@@ -33,7 +32,6 @@
         </thead>
         <tbody>
             <tr>
-                <th scope="row">1</th>
                 <td><input id="usernameFld" class="form-control" placeholder="Username"/></td>
                 <td><input id="passwordFld" class="form-control" type="password" placeholder="Password"/></td>
                 <td><input id="firstNameFld" class="form-control" placeholder="First Name"/></td>
@@ -52,6 +50,7 @@
                     <button type="button" class="btn btn-success"><span class="fa fa-plus"></span></button>
                 </div></td>
             </tr>
+            <tr id="user-template" style="display:none"></tr>
         </tbody>
     </table>
 </div>
