--- a/src/main/webapp/jquery/components/profile/profile.template.client.html
+++ b/src/main/webapp/jquery/components/profile/profile.template.client.html
@@ -10,7 +10,8 @@
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
-    <script src="../../services/user.service.client.js"></script>
+    <script src="../../services/profile.service.client.js"></script>
+    <script src="../../services/session.service.client.js"></script>
     <script src="../../models/user.model.client.js"></script>
     <script src="profile.controller.client.js"></script>
 </head>
