--- a/src/main/webapp/jquery/components/admin/user-admin.template.client.html
+++ b/src/main/webapp/jquery/components/admin/user-admin.template.client.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="user-admin.style.client.css"/>
     <title>User Admin</title>
     <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -50,7 +51,7 @@
                     <button type="button" class="btn btn-success"><span class="fa fa-plus"></span></button>
                 </div></td>
             </tr>
-            <tr id="user-template" style="display:none"></tr>
+            <tr id="user-template"></tr>
         </tbody>
     </table>
 </div>
