--- a/src/main/webapp/jquery/components/register/register.template.client.html
+++ b/src/main/webapp/jquery/components/register/register.template.client.html
@@ -56,7 +56,7 @@
     </form>
     <div class="text-center">
         Already have an account?
-        <a href="#">Sign In</a>
+        <a href="/jquery/components/login/login.template.client.html">Sign In</a>
     </div>
 </div>
 </body>
