Rework functionality for HTTP session

--- a/src/main/webapp/jquery/components/login/login.template.client.html
+++ b/src/main/webapp/jquery/components/login/login.template.client.html
@@ -10,7 +10,7 @@
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
-    <script src="../../services/user.service.client.js"></script>
+    <script src="../../services/session.service.client.js"></script>
     <script src="../../models/user.model.client.js"></script>
     <script src="login.controller.client.js"></script>
 </head>
@@ -32,7 +32,7 @@
     </form>
     <div class="text-center">
         Need an account?
-        <a href="#">Register</a>
+        <a href="/jquery/components/register/register.template.client.html">Register</a>
     </div>
 </div>
 </body>
