--- a/src/main/webapp/jquery/components/profile/profile.template.client.html
+++ b/src/main/webapp/jquery/components/profile/profile.template.client.html
@@ -47,10 +47,10 @@
             <input id="dob-fld" type="date" class="form-control" name="date-of-birth" disabled/>
         </div>
         <div class="form-group">
-            <select class="form-control" disabled>
-                <option value="STUDENT">Student</option>
-                <option value="FACULTY">Faculty</option>
-                <option value="ADMIN">Admin</option>
+            <select id="role-fld" class="form-control" disabled>
+                <option>Student</option>
+                <option>Faculty</option>
+                <option>Admin</option>
             </select>
         </div>
         <div class="form-group">
