--- a/src/main/webapp/jquery/components/profile/profile.template.client.html
+++ b/src/main/webapp/jquery/components/profile/profile.template.client.html
@@ -19,6 +19,12 @@
 <div class="profile-form">
     <form>
         <h2>Profile</h2>
+        <div id="failure-alert" class="alert alert-danger alert-dismissible fade show" role="alert">
+            Error trying to update profile!
+        </div>
+        <div id="success-alert" class="alert alert-success alert-dismissible fade show" role="alert">
+            Profile updated successfully!
+        </div>
         <div class="form-group">
             <input id="first-name-fld" type="text" class="form-control" name="first-name" placeholder="First Name" required disabled/>
             <span class="small empty-input-error">First name is required</span>
